# poetry-auto-export

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: requirements-all_extras.txt  requirements-only_dev.txt  requirements-with_dev.txt  requirements-with_hashes.txt
poetry_auto_export/: __init__.py  check_requirements_file.py  plugin.py  validation_script.py
tests/: conftest.py  test_check_requirements_file.py  test_plugin.py  test_validation_script.py
tests/fixtures/: multiple_pyproject.toml  out_of_order_table.toml
tests/fixtures/basic_project/: pyproject.toml
