[tool.poetry]
name = "poetry-auto-export"
version = "0.1.1"
description = "Automatically export dependencies to requirements.txt on every poetry lock"
authors = ["Hubert Bereś <hubert@springbok.ai>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "poetry_auto_export" }]
[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.6.0"
poetry-plugin-export = "^1.6.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"
pytest = "^7.4.3"

[tool.poetry.plugins."poetry.application.plugin"]
poetry-auto-export = "poetry_auto_export.plugin:PoetryAutoExport"

[tool.poetry-auto-export]
output = "requirements.txt"
without_hashes = true
without = ["dev"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
