[tool.poetry]
name = "poetry-auto-export"
version = "0.3.1"
description = "Automatically create requirements.txt on every poetry lock"
authors = ["Hubert Bereś <h.beres@hotmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Ddedalus/poetry-auto-export"
packages = [{ include = "poetry_auto_export" }]
[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.6.0"
poetry-plugin-export = "^1.6.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.7"
pytest = "^8.3.3"
pytest-mock = "^3.12.0"
pytest-cov = "^5.0.0"

[tool.poetry.plugins."poetry.application.plugin"]
poetry-auto-export = "poetry_auto_export.plugin:PoetryAutoExport"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
