[tool.poetry]
name = "poetry-auto-export"
version = "0.4.0"
description = "Automatically create requirements.txt on every poetry lock"
authors = ["Hubert Bereś <h.beres@hotmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Ddedalus/poetry-auto-export"
packages = [{ include = "poetry_auto_export" }]
[tool.poetry.dependencies]
python = "^3.10"
poetry = ">=1.6.0,<3.0.0"
poetry-plugin-export = "^1.6.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.7"
pytest = "^8.3.3"
pytest-mock = "^3.12.0"
pytest-cov = "^6.0.0"

[tool.poetry.plugins."poetry.application.plugin"]
poetry-auto-export = "poetry_auto_export.plugin:PoetryAutoExport"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry-auto-export.exports]]
output = "examples/requirements.txt"
without_hashes = true

[[tool.poetry-auto-export.exports]]
output = "examples/requirements-only_dev.txt"
only = ["dev"]
without_hashes = true

[[tool.poetry-auto-export.exports]]
output = "examples/requirements-with_dev.txt"
with = ["dev"]
without_hashes = true

[[tool.poetry-auto-export.exports]]
output = "examples/requirements-without_dev.txt"
without = ["dev"]
without_hashes = true

[[tool.poetry-auto-export.exports]]
output = "examples/requirements-with_credentials.txt"
without_hashes = true
with_credentials = true

[[tool.poetry-auto-export.exports]]
output = "examples/requirements-without_urls.txt"
without_hashes = true
without_urls = true

[[tool.poetry-auto-export.exports]]
output = "examples/requirements-all_extras.txt"
without_hashes = true
all_extras = true

[[tool.poetry-auto-export.exports]]
output = "examples/requirements-with_hashes.txt"
